<resources>
    <string name="qr_code_scanner">QR-DOC</string>


    <string name="recent_scanned">Recent Scanned</string>
    <string name="recent_scanned_results">Recent Scanned Results</string>
    <string name="favourites_scanned_results">Favourite Scanned Results</string>
    <string name="favourites">Favourites</string>

    <string name="grant">Grant</string>
    <string name="loading">Loading</string>


    <string name="clear_all_result">Are you sure to clear all scanned result?</string>
    <string name="clear">Clear</string>
    <string name="scan_profile_upload_btn">Upload Photo Qr</string>
    <string name="scan_profile_place_btn">Place Camera Qr</string>
    <string name="auth_layout_btn">Let’s Get Started</string>
    <string name="delete">Delete</string>
    <string name="want_to_delete">Do you really want to delete this result?</string>
    <string name="cancel">Cancel</string>


    <string name="we_need_permission">We need camera permission to scan QR codes. Go to App Settings and manage
        permissions
    </string>
    <string name="PermissionRequest">Please give access your Camera so that we can scan and provide you what is the inside the cod</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="scan">Scanning Code...</string>
    <string name="clear_all">Clear all</string>
    <string name="app_name">QR-DOC</string>
    <string name="scan_qr_profile">Scan OR code</string>
    <string name="author">autonture</string>
    <string name="scan_qr">Scan OR code</string>
    <string name="recommendations_scan">Place qr code inside the frame to scan please</string>
    <string name="recommendations_scan_2">avoid shake to get results quickly</string>
    <string name="scanning_time">Scanning Code...</string>
    <string name="history">Scanning History</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="history_description">history of all codes scanned</string>
    <string name="no_result">NO RESULT</string>
    <string name="Upload">Upload QR CODE</string>
    <string name="preview_generate">Generate QR Code</string>
    <string name="generate">Generate</string>
    <string name="download">Download</string>
    <string name="url_text">URL or Text</string>
    <string name="history_information_1">Proreader will Keep your last all days history</string>
    <string name="history_information_2">to keep your all scared history please</string>
    <string name="history_information_3">purched our pro package</string>
</resources>
