<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:textColor="@color/light_gray"
            android:textSize="18sp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/recent_scanned_results" />

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="32dp"
            android:id="@+id/removeAll"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_clear_all_blue_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvHeaderText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/history_description_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_gray"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/history_information_1"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintVertical_bias="0.0" />



    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/history_description_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/history_information_2"
            android:textColor="@color/light_gray"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_description_1" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/history_description_3"
            android:textColor="@color/light_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_information_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/history_description_2" />



</androidx.constraintlayout.widget.ConstraintLayout>