<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.generate_qr.GenerateQrCodeActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/backround">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/preview_generate"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/qr_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:layout_marginTop="150dp"
            android:id="@+id/qr_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:fontFamily="@font/inter_medium"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout" />
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="325dp"
            android:layout_height="89dp"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qr_image">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/data_value"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/backround_button"
                android:fontFamily="@font/inter_medium"

                android:textColor="@color/white"
                android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/generate"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_medium"
            android:textSize="13dp"
            android:background="@drawable/backround_button"
            android:id="@+id/create_qr_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
            android:text="@string/download"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_medium"
            android:textSize="13dp"
            android:id="@+id/download_qr_btn"
            android:background="@drawable/backround_button"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_qr_code_btn"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>