<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backround"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.scan_profile.ScanProfileActivity">


    <TextView
            android:layout_marginBottom="170dp"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/scan_qr_profile"
            android:textColor="@color/light_gray"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:layout_marginBottom="105dp"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/recommendations_scan"
            android:textColor="@color/light_gray"
            android:textSize="13dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
            android:layout_marginBottom="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/recommendations_scan_2"
            android:textColor="@color/light_gray"
            android:textSize="13dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
            android:layout_marginBottom="50dp"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"
            tools:ignore="MissingConstraints" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:gravity="center_horizontal"
            android:text="@string/scan"
            android:textColor="@color/light_gray"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
            android:layout_marginTop="20dp"
            android:id="@+id/place_camera_btn"
            android:layout_width="250dp"
            android:layout_height="53dp"
            android:background="@drawable/backround_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/scan_profile_place_btn"
            android:textColor="@color/light_gray"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/upload_file_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints" />

    <Button
            android:layout_marginTop="80dp"
            android:id="@+id/upload_file_btn"
            android:layout_width="250dp"
            android:layout_height="53dp"
            android:background="@drawable/backround_button"
            android:fontFamily="@font/inter_semibold"
            android:text="upload"
            android:textColor="@color/light_gray"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints" />

    <ImageButton
            android:id="@+id/permission_start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTranslucent"
            android:fontFamily="@font/inter_semibold"
            android:src="@drawable/ic_permission"
            android:text="zoom"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.341"
            app:layout_constraintStart_toEndOf="@+id/place_camera_btn"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>